manifests/ballot-api/ballot-api-ingress.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: ${_name}
spec:
  virtualhost:
    fqdn: ${_name}.${domain}
    tls:
      secretName: ${tls_secret}
  routes:
    - match: /
      services:
        - name: embed-config-api
          port: 80
